--- a/p8105_hw5_amh2325.Rmd
+++ b/p8105_hw5_amh2325.Rmd
@@ -10,3 +10,43 @@ knitr::opts_chunk$set(echo = TRUE)
 
 library(tidyverse)
 ```
+
+#Load IRIS dataset from the TIDYVERSE 
+```{r}
+library(tidyverse)
+
+set.seed(10)
+
+iris_with_missing = iris %>% 
+  map_df(~replace(.x, sample(1:150, 20), NA)) %>%
+  mutate(Species = as.character(Species)) %>% 
+  janitor::clean_names()
+```
+CHARACTER 
+```{r}
+iris_function1 = function(x) {
+  if(!is.numeric(x))
+    replace_na(x, "virginica")
+  }
+```
+NUMERIC 
+```{r}
+iris_function2 = function(y) {
+  if(is.numeric(y))
+    replace_na(mean(y, na.rm = TRUE))
+  }
+```
+CHECK FUNCTION 
+```{r}
+iris_with_missing %>%
+iris_function2(sepal_length)
+
+iris_function2(iris_with_missing$petal_width)
+
+mean(iris_with_missing$petal_width, na.rm=TRUE)
+```
+
+```{r}
+replace_iris1 = map(.x=iris_with_missing, ~iris_function1(.x))
+replace_iris1
+```
