Loaded data Made two separate functions into 1 function so that I did not have to use two map codes

--- a/p8105_hw5_amh2325.md
+++ b/p8105_hw5_amh2325.md
@@ -3,4 +3,94 @@ p8105\_hw5\_amh2325
 Amanda Howarth
 11/7/2019
 
+\#Load IRIS dataset from the TIDYVERSE
 
+``` r
+library(tidyverse)
+
+set.seed(10)
+
+iris_with_missing = iris %>% 
+  map_df(~replace(.x, sample(1:150, 20), NA)) %>%
+  mutate(Species = as.character(Species)) %>% 
+  janitor::clean_names()
+```
+
+## PROBLEM 1
+
+Write a function that takes a vector as an argument; replaces missing
+values using the rules defined above; and returns the resulting vector.
+Apply this function to the columns of iris\_with\_missing using a map
+statement.
+
+``` r
+iris_function1 = function(x) {
+  if(!is.numeric(x))
+    replace_na(x, "virginica")
+  else if (is.numeric(x))
+    replace_na(mean(x, na.rm = TRUE))
+  }
+```
+
+CHECK FUNCTION
+
+``` r
+iris_function1(iris_with_missing$petal_width)
+```
+
+    ## [1] 1.192308
+
+``` r
+mean(iris_with_missing$petal_width, na.rm=TRUE)
+```
+
+    ## [1] 1.192308
+
+``` r
+replace_iris = map(.x=iris_with_missing, ~iris_function1(.x))
+replace_iris
+```
+
+    ## $sepal_length
+    ## [1] 5.819231
+    ## 
+    ## $sepal_width
+    ## [1] 3.075385
+    ## 
+    ## $petal_length
+    ## [1] 3.765385
+    ## 
+    ## $petal_width
+    ## [1] 1.192308
+    ## 
+    ## $species
+    ##   [1] "setosa"     "setosa"     "setosa"     "setosa"     "setosa"    
+    ##   [6] "setosa"     "setosa"     "setosa"     "setosa"     "setosa"    
+    ##  [11] "setosa"     "setosa"     "setosa"     "setosa"     "setosa"    
+    ##  [16] "setosa"     "setosa"     "setosa"     "setosa"     "setosa"    
+    ##  [21] "setosa"     "virginica"  "setosa"     "setosa"     "virginica" 
+    ##  [26] "setosa"     "virginica"  "setosa"     "setosa"     "setosa"    
+    ##  [31] "setosa"     "setosa"     "setosa"     "setosa"     "setosa"    
+    ##  [36] "setosa"     "setosa"     "setosa"     "setosa"     "setosa"    
+    ##  [41] "setosa"     "virginica"  "setosa"     "setosa"     "setosa"    
+    ##  [46] "virginica"  "setosa"     "setosa"     "setosa"     "setosa"    
+    ##  [51] "virginica"  "versicolor" "versicolor" "versicolor" "versicolor"
+    ##  [56] "versicolor" "virginica"  "versicolor" "virginica"  "versicolor"
+    ##  [61] "versicolor" "versicolor" "versicolor" "versicolor" "versicolor"
+    ##  [66] "versicolor" "versicolor" "versicolor" "versicolor" "versicolor"
+    ##  [71] "versicolor" "virginica"  "versicolor" "versicolor" "versicolor"
+    ##  [76] "versicolor" "versicolor" "versicolor" "versicolor" "virginica" 
+    ##  [81] "versicolor" "versicolor" "versicolor" "versicolor" "versicolor"
+    ##  [86] "versicolor" "versicolor" "versicolor" "versicolor" "versicolor"
+    ##  [91] "versicolor" "versicolor" "versicolor" "virginica"  "versicolor"
+    ##  [96] "versicolor" "versicolor" "versicolor" "versicolor" "virginica" 
+    ## [101] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
+    ## [106] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
+    ## [111] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
+    ## [116] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
+    ## [121] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
+    ## [126] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
+    ## [131] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
+    ## [136] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
+    ## [141] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
+    ## [146] "virginica"  "virginica"  "virginica"  "virginica"  "virginica"
