--- a/p8105_hw5_amh2325.Rmd
+++ b/p8105_hw5_amh2325.Rmd
@@ -22,31 +22,27 @@ iris_with_missing = iris %>%
   mutate(Species = as.character(Species)) %>% 
   janitor::clean_names()
 ```
-CHARACTER 
+## PROBLEM 1
+Write a function that takes a vector as an argument; replaces missing values using the rules defined above; and returns the resulting vector. Apply this function to the columns of iris_with_missing using a map statement. 
+
 ```{r}
 iris_function1 = function(x) {
   if(!is.numeric(x))
     replace_na(x, "virginica")
+  else if (is.numeric(x))
+    replace_na(mean(x, na.rm = TRUE))
   }
 ```
-NUMERIC 
-```{r}
-iris_function2 = function(y) {
-  if(is.numeric(y))
-    replace_na(mean(y, na.rm = TRUE))
-  }
-```
+
 CHECK FUNCTION 
 ```{r}
-iris_with_missing %>%
-iris_function2(sepal_length)
 
-iris_function2(iris_with_missing$petal_width)
+iris_function1(iris_with_missing$petal_width)
 
 mean(iris_with_missing$petal_width, na.rm=TRUE)
 ```
 
 ```{r}
-replace_iris1 = map(.x=iris_with_missing, ~iris_function1(.x))
-replace_iris1
+replace_iris = map(.x=iris_with_missing, ~iris_function1(.x))
+replace_iris
 ```
