--- a/p8105_hw5_amh2325.Rmd
+++ b/p8105_hw5_amh2325.Rmd
@@ -36,6 +36,8 @@ iris_function1 = function(x) {
 
 CHECK FUNCTION 
 ```{r}
+iris_with_missing %>%
+iris_function1(sepal_length)
 
 iris_function1(iris_with_missing$petal_width)
 
@@ -46,3 +48,21 @@ mean(iris_with_missing$petal_width, na.rm=TRUE)
 replace_iris = map(.x=iris_with_missing, ~iris_function1(.x))
 replace_iris
 ```
+## PROBLEM 2
+Create a tidy dataframe containing data from all participants, including the subject ID, arm, and observations over time. 
+```{r}
+treatment_study = list.files(path="./data/", full.names = TRUE)
+
+treatment_study_data = 
+  treatment_study %>%
+  map_df(read.csv) %>% 
+  mutate(
+    "subject_id" = c(1:10, 1:10),
+    "treatment_arm" = c("control", "control", "control", "control", "control", "control", "control", "control", "control", "control", "experimental", "experimental", "experimental", "experimental", "experimental", "experimental", "experimental", "experimental", "experimental", "experimental")
+  ) %>% 
+  select("subject_id", "treatment_arm", everything())
+treatment_study_data
+
+```
+
+
