Added pivot longer command to make data "tidier". Also renamed the weeks from week_1 to "1", etc. Made spaghetti plot, working on fixing this bc lines do not currently look correct.

--- a/p8105_hw5_amh2325.md
+++ b/p8105_hw5_amh2325.md
@@ -94,3 +94,62 @@ replace_iris
     ## [136] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
     ## [141] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
     ## [146] "virginica"  "virginica"  "virginica"  "virginica"  "virginica"
+
+## PROBLEM 2
+
+Create a tidy dataframe containing data from all participants, including
+the subject ID, arm, and observations over time.
+
+``` r
+treatment_study = list.files(path="./data/", full.names = TRUE)
+
+treatment_study_data = 
+  treatment_study %>%
+  map_df(read.csv) %>% 
+  mutate(
+    "subject_id" = c(1:10, 1:10),
+    "treatment_arm" = c("control", "control", "control", "control", "control", "control", "control", "control", "control", "control", "experimental", "experimental", "experimental", "experimental", "experimental", "experimental", "experimental", "experimental", "experimental", "experimental")
+  ) %>% 
+  select("subject_id", "treatment_arm", everything())%>% 
+  pivot_longer(
+    week_1:week_8, 
+    names_to = "week",
+    values_to = "result"
+  ) %>%
+  mutate(week = recode(week, "week_1" = "1", "week_2" = "2", "week_3" = "3", "week_4" = "4", "week_5" = "5", "week_6" = "6", "week_7" = "7", "week_8" = "8"))
+
+treatment_study_data
+```
+
+    ## # A tibble: 160 x 4
+    ##    subject_id treatment_arm week  result
+    ##         <int> <chr>         <chr>  <dbl>
+    ##  1          1 control       1       0.2 
+    ##  2          1 control       2      -1.31
+    ##  3          1 control       3       0.66
+    ##  4          1 control       4       1.96
+    ##  5          1 control       5       0.23
+    ##  6          1 control       6       1.09
+    ##  7          1 control       7       0.05
+    ##  8          1 control       8       1.94
+    ##  9          2 control       1       1.13
+    ## 10          2 control       2      -0.88
+    ## # … with 150 more rows
+
+Make a spaghetti plot showing observations on each subject over time,
+and comment on differences between
+groups.
+
+``` r
+ggplot(treatment_study_data, aes(x = week, y = result, group = subject_id, color = treatment_arm)) + 
+  geom_point() + geom_line() +
+  labs(title = "Study Results for Subjects In Control and Experimental Groups, Over an 8-Week Study Period", 
+           x = "Week",
+           y = "Results") +
+  theme(plot.title = element_text(size = 10, face = "bold"))
+```
+
+![](p8105_hw5_amh2325_files/figure-gfm/unnamed-chunk-6-1.png)<!-- -->
+Overall, the subejcts in the control group experienced results of lower
+values each week (for all weight weeks) than subjects in the
+experimental group.
