--- a/p8105_hw5_amh2325.Rmd
+++ b/p8105_hw5_amh2325.Rmd
@@ -36,9 +36,6 @@ iris_function1 = function(x) {
 
 CHECK FUNCTION 
 ```{r}
-iris_with_missing %>%
-iris_function1(sepal_length)
-
 iris_function1(iris_with_missing$petal_width)
 
 mean(iris_with_missing$petal_width, na.rm=TRUE)
@@ -60,9 +57,31 @@ treatment_study_data =
     "subject_id" = c(1:10, 1:10),
     "treatment_arm" = c("control", "control", "control", "control", "control", "control", "control", "control", "control", "control", "experimental", "experimental", "experimental", "experimental", "experimental", "experimental", "experimental", "experimental", "experimental", "experimental")
   ) %>% 
-  select("subject_id", "treatment_arm", everything())
-treatment_study_data
+  select("subject_id", "treatment_arm", everything())%>% 
+  pivot_longer(
+    week_1:week_8, 
+    names_to = "week",
+    values_to = "result"
+  ) %>%
+  mutate(week = recode(week, "week_1" = "1", "week_2" = "2", "week_3" = "3", "week_4" = "4", "week_5" = "5", "week_6" = "6", "week_7" = "7", "week_8" = "8"))
 
+treatment_study_data
 ```
+Make a spaghetti plot showing observations on each subject over time, and comment on differences between groups. 
+```{r}
+ggplot(treatment_study_data, aes(x = week, y = result, group = subject_id, color = treatment_arm)) + 
+  geom_point() + geom_line() +
+  labs(title = "Study Results for Subjects In Control and Experimental Groups, Over an 8-Week Study Period", 
+           x = "Week",
+           y = "Results") +
+  theme(plot.title = element_text(size = 10, face = "bold"))
+```
+Overall, the subejcts in the control group experienced results of lower values each week (for all weight weeks) than subjects in the experimental group.
+
+
+
+
+
+
 
 
