--- a/p8105_hw5_amh2325.Rmd
+++ b/p8105_hw5_amh2325.Rmd
@@ -9,6 +9,7 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 
 library(tidyverse)
+library(broom)
 ```
 
 #Load IRIS dataset from the TIDYVERSE 
@@ -27,22 +28,17 @@ Write a function that takes a vector as an argument; replaces missing values usi
 
 ```{r}
 iris_function1 = function(x) {
-  if(!is.numeric(x))
-    replace_na(x, "virginica")
-  else if (is.numeric(x))
-    replace_na(mean(x, na.rm = TRUE))
-  }
-```
-
-CHECK FUNCTION 
-```{r}
-iris_function1(iris_with_missing$petal_width)
-
-mean(iris_with_missing$petal_width, na.rm=TRUE)
+  if (is.numeric(x)) {
+    replace_na(x, mean(x, na.rm = TRUE)) }
+    
+  else if(!is.numeric(x)) {
+    replace_na(x, "virginica") }
+}
 ```
 
 ```{r}
-replace_iris = map(.x=iris_with_missing, ~iris_function1(.x))
+replace_iris = map(.x=iris_with_missing, ~iris_function1(.x)) %>% 
+  as_tibble
 replace_iris
 ```
 ## PROBLEM 2
@@ -54,7 +50,7 @@ treatment_study_data =
   treatment_study %>%
   map_df(read.csv) %>% 
   mutate(
-    "subject_id" = c(1:10, 1:10),
+    "subject_id" = c(1:20),
     "treatment_arm" = c("control", "control", "control", "control", "control", "control", "control", "control", "control", "control", "experimental", "experimental", "experimental", "experimental", "experimental", "experimental", "experimental", "experimental", "experimental", "experimental")
   ) %>% 
   select("subject_id", "treatment_arm", everything())%>% 
@@ -69,19 +65,60 @@ treatment_study_data
 ```
 Make a spaghetti plot showing observations on each subject over time, and comment on differences between groups. 
 ```{r}
-ggplot(treatment_study_data, aes(x = week, y = result, group = subject_id, color = treatment_arm)) + 
-  geom_point() + geom_line() +
+ggplot(treatment_study_data, aes(x = week, y = result, group = subject_id,
+  color = treatment_arm)) + geom_point() + geom_line()
+  
   labs(title = "Study Results for Subjects In Control and Experimental Groups, Over an 8-Week Study Period", 
            x = "Week",
            y = "Results") +
   theme(plot.title = element_text(size = 10, face = "bold"))
 ```
-Overall, the subejcts in the control group experienced results of lower values each week (for all weight weeks) than subjects in the experimental group.
+Overall, the subejcts in the control group experienced results (observations) of lower values each week (for all weight weeks) compared to subjects in the experimental group. Thus, if the result was, for example, improved eyesight, it would appear that the treatment would have worked better for participants receiving treatment in the experimental group.
 
 ## PROBLEM 3 
+ Set the following design elements:
+* Fix n=30
+* Fix xi1 as draws from a standard Normal distribution
+* Fix β0=2
+* Fix σ2=50
+* Set β1=0. Generate 10000 datasets from the model
+```{r}
+set.seed(1)
+
+sim_regression = function(n = 30, beta0 = 2, beta1 = 0) {
+  
+  sim_data = tibble(
+    x = rnorm(n, mean = 0, sd = 1),
+    y = beta0 + beta1 * x + rnorm(n, 0, sqrt(50)))
+  
+  ls_fit = lm(y ~ x, data = sim_data) %>%
+    broom::tidy()
+  
+  tibble(
+    beta1_hat = ls_fit[[2,2]],
+    p_value = ls_fit[[2,5]])
+}
+
+sim_output = rerun(10000, sim_regression(beta1=0)) %>%
+  bind_rows()
+```
+
+Repeat the above for β1={1,2,3,4,5,6}
+
+```{r}
+sim_results = 
+  tibble(beta1_new = c(1, 2, 3, 4, 5, 6)) %>% 
+  mutate(output_list = map(.x = beta1_new, ~rerun(10000, sim_regression(beta1 = .x))),
+  estimate_df = map(output_list, bind_rows))%>%
+  select(-output_list)%>% 
+  unnest(estimate_df)
+```
+Make a plot showing the proportion of times the null was rejected (the power of the test) on the y axis and the true value of β1 on the x axis. Describe the association between effect size and power.
 
 
 
+
+```
 
 
 
