--- a/p8105_hw5_amh2325.md
+++ b/p8105_hw5_amh2325.md
@@ -25,75 +25,34 @@ statement.
 
 ``` r
 iris_function1 = function(x) {
-  if(!is.numeric(x))
-    replace_na(x, "virginica")
-  else if (is.numeric(x))
-    replace_na(mean(x, na.rm = TRUE))
-  }
+  if (is.numeric(x)) {
+    replace_na(x, mean(x, na.rm = TRUE)) }
+    
+  else if(!is.numeric(x)) {
+    replace_na(x, "virginica") }
+}
 ```
 
-CHECK FUNCTION
-
 ``` r
-iris_function1(iris_with_missing$petal_width)
-```
-
-    ## [1] 1.192308
-
-``` r
-mean(iris_with_missing$petal_width, na.rm=TRUE)
-```
-
-    ## [1] 1.192308
-
-``` r
-replace_iris = map(.x=iris_with_missing, ~iris_function1(.x))
+replace_iris = map(.x=iris_with_missing, ~iris_function1(.x)) %>% 
+  as_tibble
 replace_iris
 ```
 
-    ## $sepal_length
-    ## [1] 5.819231
-    ## 
-    ## $sepal_width
-    ## [1] 3.075385
-    ## 
-    ## $petal_length
-    ## [1] 3.765385
-    ## 
-    ## $petal_width
-    ## [1] 1.192308
-    ## 
-    ## $species
-    ##   [1] "setosa"     "setosa"     "setosa"     "setosa"     "setosa"    
-    ##   [6] "setosa"     "setosa"     "setosa"     "setosa"     "setosa"    
-    ##  [11] "setosa"     "setosa"     "setosa"     "setosa"     "setosa"    
-    ##  [16] "setosa"     "setosa"     "setosa"     "setosa"     "setosa"    
-    ##  [21] "setosa"     "virginica"  "setosa"     "setosa"     "virginica" 
-    ##  [26] "setosa"     "virginica"  "setosa"     "setosa"     "setosa"    
-    ##  [31] "setosa"     "setosa"     "setosa"     "setosa"     "setosa"    
-    ##  [36] "setosa"     "setosa"     "setosa"     "setosa"     "setosa"    
-    ##  [41] "setosa"     "virginica"  "setosa"     "setosa"     "setosa"    
-    ##  [46] "virginica"  "setosa"     "setosa"     "setosa"     "setosa"    
-    ##  [51] "virginica"  "versicolor" "versicolor" "versicolor" "versicolor"
-    ##  [56] "versicolor" "virginica"  "versicolor" "virginica"  "versicolor"
-    ##  [61] "versicolor" "versicolor" "versicolor" "versicolor" "versicolor"
-    ##  [66] "versicolor" "versicolor" "versicolor" "versicolor" "versicolor"
-    ##  [71] "versicolor" "virginica"  "versicolor" "versicolor" "versicolor"
-    ##  [76] "versicolor" "versicolor" "versicolor" "versicolor" "virginica" 
-    ##  [81] "versicolor" "versicolor" "versicolor" "versicolor" "versicolor"
-    ##  [86] "versicolor" "versicolor" "versicolor" "versicolor" "versicolor"
-    ##  [91] "versicolor" "versicolor" "versicolor" "virginica"  "versicolor"
-    ##  [96] "versicolor" "versicolor" "versicolor" "versicolor" "virginica" 
-    ## [101] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
-    ## [106] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
-    ## [111] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
-    ## [116] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
-    ## [121] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
-    ## [126] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
-    ## [131] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
-    ## [136] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
-    ## [141] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
-    ## [146] "virginica"  "virginica"  "virginica"  "virginica"  "virginica"
+    ## # A tibble: 150 x 5
+    ##    sepal_length sepal_width petal_length petal_width species
+    ##           <dbl>       <dbl>        <dbl>       <dbl> <chr>  
+    ##  1         5.1          3.5         1.4         0.2  setosa 
+    ##  2         4.9          3           1.4         0.2  setosa 
+    ##  3         4.7          3.2         1.3         0.2  setosa 
+    ##  4         4.6          3.1         1.5         1.19 setosa 
+    ##  5         5            3.6         1.4         0.2  setosa 
+    ##  6         5.4          3.9         1.7         0.4  setosa 
+    ##  7         5.82         3.4         1.4         0.3  setosa 
+    ##  8         5            3.4         1.5         0.2  setosa 
+    ##  9         4.4          2.9         1.4         0.2  setosa 
+    ## 10         4.9          3.1         3.77        0.1  setosa 
+    ## # … with 140 more rows
 
 ## PROBLEM 2
 
@@ -107,7 +66,7 @@ treatment_study_data =
   treatment_study %>%
   map_df(read.csv) %>% 
   mutate(
-    "subject_id" = c(1:10, 1:10),
+    "subject_id" = c(1:20),
     "treatment_arm" = c("control", "control", "control", "control", "control", "control", "control", "control", "control", "control", "experimental", "experimental", "experimental", "experimental", "experimental", "experimental", "experimental", "experimental", "experimental", "experimental")
   ) %>% 
   select("subject_id", "treatment_arm", everything())%>% 
@@ -141,15 +100,68 @@ and comment on differences between
 groups.
 
 ``` r
-ggplot(treatment_study_data, aes(x = week, y = result, group = subject_id, color = treatment_arm)) + 
-  geom_point() + geom_line() +
+ggplot(treatment_study_data, aes(x = week, y = result, group = subject_id,
+  color = treatment_arm)) + geom_point() + geom_line()
+```
+
+![](p8105_hw5_amh2325_files/figure-gfm/unnamed-chunk-5-1.png)<!-- -->
+
+``` r
   labs(title = "Study Results for Subjects In Control and Experimental Groups, Over an 8-Week Study Period", 
            x = "Week",
            y = "Results") +
   theme(plot.title = element_text(size = 10, face = "bold"))
 ```
 
-![](p8105_hw5_amh2325_files/figure-gfm/unnamed-chunk-6-1.png)<!-- -->
-Overall, the subejcts in the control group experienced results of lower
-values each week (for all weight weeks) than subjects in the
+    ## NULL
+
+Overall, the subejcts in the control group experienced results
+(observations) of lower values each week (for all weight weeks) compared
+to subjects in the experimental group. Thus, if the result was, for
+example, improved eyesight, it would appear that the treatment would
+have worked better for participants receiving treatment in the
 experimental group.
+
+## PROBLEM 3
+
+Set the following design elements: \* Fix n=30 \* Fix xi1 as draws from
+a standard Normal distribution \* Fix β0=2 \* Fix σ2=50 \* Set β1=0.
+Generate 10000 datasets from the model
+
+``` r
+set.seed(1)
+
+sim_regression = function(n = 30, beta0 = 2, beta1 = 0) {
+  
+  sim_data = tibble(
+    x = rnorm(n, mean = 0, sd = 1),
+    y = beta0 + beta1 * x + rnorm(n, 0, sqrt(50)))
+  
+  ls_fit = lm(y ~ x, data = sim_data) %>%
+    broom::tidy()
+  
+  tibble(
+    beta1_hat = ls_fit[[2,2]],
+    p_value = ls_fit[[2,5]])
+}
+
+sim_output = rerun(10000, sim_regression(beta1=0)) %>%
+  bind_rows()
+```
+
+Repeat the above for β1={1,2,3,4,5,6}
+
+``` r
+sim_results = 
+  tibble(beta1_new = c(1, 2, 3, 4, 5, 6)) %>% 
+  mutate(output_list = map(.x = beta1_new, ~rerun(10000, sim_regression(beta1 = .x))),
+  estimate_df = map(output_list, bind_rows))%>%
+  select(-output_list)%>% 
+  unnest(estimate_df)
+```
+
+Make a plot showing the proportion of times the null was rejected (the
+power of the test) on the y axis and the true value of β1 on the x axis.
+Describe the association between effect size and power.
+
+\`\`\`
