--- a/p8105_hw5_amh2325.md
+++ b/p8105_hw5_amh2325.md
@@ -3,7 +3,7 @@ p8105\_hw5\_amh2325
 Amanda Howarth
 11/7/2019
 
-\#Load IRIS dataset from the TIDYVERSE
+## Load IRIS dataset from the TIDYVERSE
 
 ``` r
 library(tidyverse)
@@ -164,4 +164,26 @@ Make a plot showing the proportion of times the null was rejected (the
 power of the test) on the y axis and the true value of β1 on the x axis.
 Describe the association between effect size and power.
 
-\`\`\`
+``` r
+sim_results %>% 
+  mutate(null_rejected = ifelse(p_value < 0.05, "reject", "fail to reject")) %>% 
+  group_by(beta1_new, null_rejected) %>% 
+ summarise_(n= ~n()) %>%
+  mutate(proportion = prop.table(n/sum(n))) %>% 
+  filter(null_rejected == "reject") %>%
+  ggplot(aes(x = beta1_new, y = proportion)) +  geom_line() +
+  
+  labs(title = "Power of Test per Effect Size (true value of beta1)", 
+           x = "Effect Size",
+           y = "Power") +
+  theme(plot.title = element_text(size = 10, face = "bold"))
+```
+
+    ## Warning: summarise_() is deprecated. 
+    ## Please use summarise() instead
+    ## 
+    ## The 'programming' vignette or the tidyeval book can help you
+    ## to program with summarise() : https://tidyeval.tidyverse.org
+    ## This warning is displayed once per session.
+
+![](p8105_hw5_amh2325_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
