Mad a plot showing the average estimate of β̂ 1 on the y axis and the true value of β1 on the x axis. Made a second plot (or overlay on the first) the average estimate of β̂ 1 only in samples for which the null was rejected on the y axis and the true value of β1 on the x axis. I
Also, Added 0 to vector in tibble as per "Set β1=0" in directions.

--- a/p8105_hw5_amh2325.md
+++ b/p8105_hw5_amh2325.md
@@ -153,7 +153,7 @@ Repeat the above for β1={1,2,3,4,5,6}
 
 ``` r
 sim_results = 
-  tibble(beta1_new = c(1, 2, 3, 4, 5, 6)) %>% 
+  tibble(beta1_new = c(0, 1, 2, 3, 4, 5, 6)) %>% 
   mutate(output_list = map(.x = beta1_new, ~rerun(10000, sim_regression(beta1 = .x))),
   estimate_df = map(output_list, bind_rows))%>%
   select(-output_list)%>% 
@@ -187,3 +187,39 @@ sim_results %>%
     ## This warning is displayed once per session.
 
 ![](p8105_hw5_amh2325_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
+\#\# Describe the association between effect size and power.
+
+We can see above that as the effect size increases, power also
+increases.
+
+``` r
+plot1 = sim_results %>% 
+  group_by(beta1_new) %>% 
+  summarise(mean_beta_hat = mean(beta1_hat)) %>% 
+    ggplot(aes(x = beta1_new, y = mean_beta_hat)) + geom_point() +geom_line() +
+  
+  labs(title = "Average Beta1_hat values Across True Values of Beta1", 
+           x = "True Values of Beta1",
+           y = "Average Values of Beta1_hat") +
+  theme(plot.title = element_text(size = 10, face = "bold"))
+plot1
+```
+
+![](p8105_hw5_amh2325_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
+
+``` r
+plot2 = sim_results %>% 
+  mutate(null_rejected = ifelse(p_value < 0.05, "reject", "fail to reject")) %>% 
+  group_by(beta1_new, null_rejected) %>% 
+  filter(null_rejected == "reject") %>%
+  summarise(mean_beta_hat = mean(beta1_hat)) %>% 
+    ggplot(aes(x = beta1_new, y = mean_beta_hat)) + geom_point() +geom_line() +
+  
+  labs(title = "Average Beta1_hat values Across True Values of Beta1, when the Null is Rejected (p-value < 0.05)", 
+           x = "True Values of Beta1",
+           y = "Average Values of Beta1_hat") +
+  theme(plot.title = element_text(size = 10, face = "bold"))
+plot2
+```
+
+![](p8105_hw5_amh2325_files/figure-gfm/unnamed-chunk-9-2.png)<!-- -->
